# MCP-Demo

./: .env.example  .gitignore  README.md  __init__.py  cli.py  demo_all_servers.py  demo_calculator.py  demo_file_server.py  environment.yml  pyproject.toml  requirements.txt  test_setup.py  tutorials.db  verify_setup.py
mcp_servers/: __init__.py  base.py  calculator_server.py  file_server.py  protocol.py
server/: __init__.py  app.py
server/api/: __init__.py  mcp_servers.py  sessions.py  tutorials.py
server/templates/: index.html
tests/: __init__.py  test_app.py  test_base_server.py  test_calculator_server.py  test_cli.py  test_file_server.py  test_mcp_servers_api.py  test_progress.py  test_protocol.py  test_renderer.py  test_tutorial_database.py  test_tutorials_api.py
tutorials/: __init__.py  database.py  models.py  progress.py  renderer.py
