[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-demo"
version = "0.1.0"
description = "Model Context Protocol (MCP) demonstration project - Learn MCP from beginner to expert"
readme = "README.md"
license = "MIT"
authors = [{name = "Karthik Ravi"}]
keywords = ["mcp", "model-context-protocol", "tutorial", "demo", "ai", "llm"]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

all = [
    "mcp-demo[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/karthik-ravi-1537/MCP-Demo"
Documentation = "https://github.com/karthik-ravi-1537/MCP-Demo#readme"
Repository = "https://github.com/karthik-ravi-1537/MCP-Demo.git"
Issues = "https://github.com/karthik-ravi-1537/MCP-Demo/issues"
Discussions = "https://github.com/karthik-ravi-1537/MCP-Demo/discussions"

[project.scripts]
mcp-demo = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_servers*", "server*", "tutorials*"]
exclude = ["tests*"]

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes errors
    "I",    # import sorting
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
    "N999",  # invalid module name (common with repo names containing hyphens)
    "E721",  # type comparisons (functional in this demo project)
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"